# OpcUaPubSub

./: README.md  build.sh  evaluate_on_board.py
docker/: CMakeLists.txt  Dockerfile  opcua_publisher.c  opcua_pubsub.c
src/: .gitignore  opcua_pubsub.h  opcua_subscriber.c
